--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="/styles/main.css">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-</body>
-</html>
+
+    <header>
+        <p>Navigation Bar goes here</p>
+    </header>
+    <main>
