delete and edit functionalilty

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,11 +1,11 @@
-    <%-include("partials/header.ejs")%>
+<%-include("partials/header.ejs")%>
 
 
     <form action="/add-blog" method="POST">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" required>
         <label for="content">Blog Content</label>
-        <input type="text" id="content" name="content" required>
+        <textarea type="text" id="content" name="content" required></textarea>
         <input type="submit" value="Publish">
     </form>
     
